# Neurogenesis

./: .coverage  .coveragerc  .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  setup.py  testenv.yml
checkpoints/: checkpoint.pt
experiments/: FineTunedDesign.ipynb  SelfContainedBaseline.ipynb  config.py  experimenter.py  mnist_base_checkpoint.pt  mnist_baseline.py  mnist_parallel.py  mnist_serial.py  utils.py
notebooks/: exp_batch copy.ipynb  exp_batch.ipynb  exp_minibatch.ipynb  mnist_baseline.ipynb
src/config/: logging.py
src/models/: base_mlp.py  growable_mlp.py
src/training/: callbacks.py  custom_trainers.py  trainer.py  trainers.py
src/utils/: growth_utils.py  init_utils.py
tests/: conftest.py  test_base_mlp.py  test_growable_mlp.py  test_growth.py  test_growth_utils.py  test_init_utils.py  test_interface_equivalence.py  test_trainer.py  utils.py
