[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/docs
'''

[tool.pytest.ini_options]
addopts = "-v -s --cov=src --cov-report=term"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
omit = [
    "tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
show_missing = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
exclude = [".git", "__pycache__", "build", "dist"]
per-file-ignores = [
    "__init__.py:F401",  # imported but unused in __init__.py files
] 