[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

# ---------------------------
# Code Formatting: Black
# ---------------------------
[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
^/docs
'''

# ---------------------------
# Linting & Import Sorting: Ruff
# ---------------------------
[tool.ruff]
line-length = 120  # Do not flag strings even if beyond Black limit

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E203",  # Whitespace before ':' — matches Black's style
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ---------------------------
# Testing: Pytest
# ---------------------------
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v -s --cov=src --cov-report=term"
testpaths = ["tests"]
python_files = ["test_*.py"]
log_cli = true
log_level = "INFO"

# ---------------------------
# Code Coverage: Coverage.py
# ---------------------------
[tool.coverage.run]
branch = true
omit = [
    "tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == '__main__':",
    "raise NotImplementedError",
]